# debrief

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml
.github/workflows/: ci.yaml
.sqlx/: query-5665e50349b85635c7b1d89a5ab8ccc6b22485e7d312119f9352719c33894420.json
migrations/: 20240708135028_initial.sql
src/: main.rs
src/chat/: api.rs  gemini.rs  mod.rs  provider.rs
src/delivery/: api.rs  db.rs  mod.rs  slack.rs
src/github/: api.rs
