[package]
name = "debrief"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = { version = "0.39.0", features = ["rustls-webpki-tokio", "tokio"] }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.86"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.3"
async-trait = "0.1.81"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
serde = "1.0.204"
url = "2.5.2"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
google-generative-ai-rs = { version = "0.3.0", features = ["beta"] }
itertools = "0.13.0"