[package]
name = "debrief"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = { version = "0.42.1", features = ["rustls-webpki-tokio", "tokio"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.93"
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
async-trait = "0.1.83"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
serde = "1.0.215"
url = "2.5.4"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
itertools = "0.13.0"