[package]
name = "debrief"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = { version = "0.45.0", features = ["rustls-webpki-tokio", "tokio"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.99"
chrono = "0.4.42"
log = "0.4.28"
env_logger = "0.11.8"
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.145"
serde = "1.0.225"
url = "2.5.7"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
] }
itertools = "0.14.0"
